--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
           </label>
           <div class="taskPriority">
             <img src="Icons/priority.png" alt="fant ikke icon">
-            <label for="taskHighPriority">
+            <label class="flex" for="taskHighPriority">
               <input type="checkbox" id="taskHighPriority" class="taskHighPriority">
+              <p class=highPriorityText>Høy - må gjøres i dag</p>
             </label>
             <label for="taskMediumPriority">
               <input type="checkbox" id="taskMediumPriority" class="taskMediumPriority">
