--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
       <!-- Hovedinnhold: introduksjon, produkt, fremvisning -->
       <section id="hero" class="hero">
-        <form>
+        <form class="flex regTaskToDoForm">
           <label for="taskToDo">
             <img class="taskIcon" src="Icons/sticky-note.png" alt="fant ikke icon">
             <input type="text" name="taskToDo" id="taskToDo" class="taskToDo" placeholder="skriv inn hva som må gjøres" minlength="1" maxlength="50">
