--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <input type="datetime" name="taskDate" id="taskDate" class="taskDate" placeholder="legg inn dato">
           </label>
           <div class="flex taskPriority">
-            <img src="Icons/priority.png" alt="fant ikke icon">
+            <img class="taskPriorityIcon" src="Icons/priority.png" alt="fant ikke icon">
             <div class="flex priorityList">
               <p class="priorityText">Prioritet</p>
                <label class="flex priority" for="taskHighPriority">
