--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             <img class="taskDateIcon" src="Icons/calendar.png" alt="fant ikke icons">
             <input type="datetime" name="taskDate" id="taskDate" class="taskDate" placeholder="legg inn dato">
           </label>
-          <div class="flex taskPriority">
+          <div class="flex taskPriorityDiv">
             <img class="taskPriorityIcon" src="Icons/priority.png" alt="fant ikke icon">
-            <div class="flex priorityList">
+            <div class="flex priorityListDiv">
               <p class="priorityText">Prioritet</p>
                <label class="flex priority" for="taskHighPriority">
                 <input type="checkbox" id="taskHighPriority" class="taskHighPriority">
