--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
               </label>
             </div>
           </div>  
+          <button id="addTaksToListButton" class="addTaksToListButton">Legg til i liste</button>
         </form>
         <!-- Hero / Main / Home -->
       </section> 
