--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
       <!-- Logo, bedriftsnavn, navigasjon, temabytter, søkefelt, SoMe -->
       <img class="logoHeader" src="/Icons/request.png" alt="fant ikke icon" />
-      <h1> Min "to-do" liste</h1>
+      <h1> Min <span class="toDoText">"to-do"</span></h1>
       <img class="darkLightIcon" src="/Icons/brightness.png">
       
     </header>
@@ -49,7 +49,7 @@
               </label>
             </div>
           </div>  
-          <button id="addTaksToListButton" class="addTaksToListButton">Legg til i liste</button>
+          <button id="addTaskToListButton" class="addTaskToListButton">Legg til i liste</button>
         </form>
         <!-- Hero / Main / Home -->
       </section> 
