--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
       <!-- Logo, bedriftsnavn, navigasjon, temabytter, søkefelt, SoMe -->
       <img class="logoHeader" src="/Icons/request.png" alt="fant ikke icon" />
-      <h1> Min <span class="toDoText">"to-do"</span></h1>
+      <h1> Min<span class="toDoText">"to-do"</span>liste</h1>
       <img class="darkLightIcon" src="/Icons/brightness.png">
       
     </header>
@@ -23,11 +23,11 @@
       <!-- Hovedinnhold: introduksjon, produkt, fremvisning -->
       <section id="hero" class="hero">
         <form class="flex regTaskToDoForm">
-          <label for="taskToDo">
+          <label class="flex taskToDoLabel" for="taskToDo">
             <img class="taskIcon" src="Icons/sticky-note.png" alt="fant ikke icon">
             <input type="text" name="taskToDo" id="taskToDo" class="taskToDo" placeholder="skriv inn hva som må gjøres" minlength="1" maxlength="50">
           </label>
-          <label for="taskDate">
+          <label class="flex taskDateLabel" for="taskDate">
             <img class="taskDateIcon" src="Icons/calendar.png" alt="fant ikke icons">
             <input type="datetime" name="taskDate" id="taskDate" class="taskDate" placeholder="legg inn dato">
           </label>
