--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
           </div>  
           <button id="addTaskToListButton" class="addTaskToListButton">Legg til i liste</button>
         </form>
-        <div class="listAndButtonWrapper">
-          <div class="toDoListDiv">
-            <div class="listHeadingDiv">
+        <div class="flex listAndButtonWrapper">
+          <div class="flex toDoListDiv">
+            <div class="flex listHeadingDiv">
               <p class="listHeadingText">Oppgave som venter :</p>
               <p class="listHeadingText">Dato satt opp :</p>
             </div>
