--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <main>
       <!-- Hovedinnhold: introduksjon, produkt, fremvisning -->
-      <section id="hero" class="hero">
+      <section id="hero" class="flex hero">
         <form class="flex regTaskToDoForm">
           <label class="flex taskToDoLabel" for="taskToDo">
             <img class="taskIcon" src="Icons/sticky-note.png" alt="fant ikke icon">
