--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </div>  
           <button id="addTaskToListButton" class="addTaskToListButton">Legg til i liste</button>
         </form>
-        <div class="flex listAndButtonWrapper">
+        <!-- <div class="listAndButtonWrapper"> -->
           <div class="flex toDoListDiv">
             <div class="flex listHeadingDiv">
               <p class="listHeadingText">Oppgave som venter :</p>
@@ -60,7 +60,7 @@
             <ul id="toDoList" class="toDoList">
             </ul>
           </div>
-        </div>
+        <!-- </div> -->
 
         <!-- Hero / Main / Home -->
       </section> 
