--- a/index.html
+++ b/index.html
@@ -55,10 +55,20 @@
           <div class="flex toDoListDiv">
             <div class="flex listHeadingDiv">
               <p class="listHeadingText">Oppgave som venter :</p>
-              <p class="listHeadingText">Dato satt opp :</p>
+              <p class="listHeadingText">Dato :</p>
             </div>
             <ul id="toDoList" class="toDoList">
             </ul>
+          </div>
+          <div class="flex buttonDiv">
+            <button id="taskCompletedButton" class="taskCompletedButton">
+              <img class="taskCompletedImg" src="Icons/check-mark.png" alt="fant ikke icon">
+              Oppdrag utført !
+            </button>
+            <button id="taskDeleteButton" class="taskDeleteButton">
+              <img class="taskDeleteImg" src="Icons/recycle-bin.png" alt="fant ikke icon">
+              Slett meg !
+            </button>
           </div>
         <!-- </div> -->
 
