--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
         <!-- <div class="listAndButtonWrapper"> -->
           <div class="flex toDoListDiv">
             <div class="flex listHeadingDiv">
-              <p class="listHeadingText">Oppgave som venter :</p>
               <p class="listHeadingText">Dato :</p>
-            </div>
+              <p class="listHeadingText">Hva skal gjøres :</p>
+           </div>
             <ul id="toDoList" class="toDoList">
             </ul>
           </div>
