--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </label>
           <label class="flex taskDateLabel" for="taskDate">
             <img class="taskDateIcon" src="Icons/calendar.png" alt="fant ikke icons">
-            <input type="datetime" name="taskDate" id="taskDate" class="taskDate" placeholder="legg inn dato">
+            <input type="datetime" name="taskDate" id="taskDate" class="taskDate" placeholder="Dag/Måned">
           </label>
           <div class="flex taskPriorityDiv">
             <img class="taskPriorityIcon" src="Icons/priority.png" alt="fant ikke icon">
