--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
             <div class="flex priorityListDiv">
               <p class="priorityText">Prioritet</p>
                <label class="flex priority" for="taskHighPriority">
-                <input type="checkbox" id="taskHighPriority" class="taskHighPriority">
+                <input type="checkbox" id="taskHighPriority" class="taskPriorityCheck">
                 <p class=highPriorityText> Høy - må gjøres i dag (dato) </p>
               </label>
               <label class="flex priority" for="taskMediumPriority">
-                <input type="checkbox" id="taskMediumPriority" class="taskMediumPriority">
+                <input type="checkbox" id="taskMediumPriority" class="taskPriorityCheck">
                 <p class=mediumPriorityText>Middels - bør gjøres i dag (dato)</p>
               </label>
               <label class="flex priority" for="taskLowPriority">
-                <input type="checkbox" id="taskLowPriority" class="taskLowPriority">
+                <input type="checkbox" id="taskLowPriority" class="taskPriorityCheck">
                 <p class=lowPriorityText>Lav - ta det når det passer</p>
               </label>
             </div>
