--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
             <img class="taskPriorityIcon" src="Icons/priority.png" alt="fant ikke icon">
             <div class="flex priorityListDiv">
               <p class="priorityText">Prioritet</p>
-               <label class="flex priority" for="taskHighPriority">
-                <input type="checkbox" id="taskHighPriority" class="taskPriorityCheck">
-                <p class=highPriorityText> Høy - må gjøres i dag (dato) </p>
+               <label class="flex priority" for="highPriorityCheck">
+                <input type="checkbox" id="highPriorityCheck" class="tastPriorityCheck">
+                <p class=highPriorityText> Høy - må gjøres i dag </p>
               </label>
-              <label class="flex priority" for="taskMediumPriority">
-                <input type="checkbox" id="taskMediumPriority" class="taskPriorityCheck">
-                <p class=mediumPriorityText>Middels - bør gjøres i dag (dato)</p>
+              <label class="flex priority" for="mediumPriorityCheck">
+                <input type="checkbox" id="mediumPriorityCheck" class="taskPriorityCheck">
+                <p class=mediumPriorityText>Middels - bør gjøres i dag</p>
               </label>
-              <label class="flex priority" for="taskLowPriority">
-                <input type="checkbox" id="taskLowPriority" class="taskPriorityCheck">
+              <label class="flex priority" for="lowPriorityCheck">
+                <input type="checkbox" id="lowPriorityCheck" class="taskPriorityCheck">
                 <p class=lowPriorityText>Lav - ta det når det passer</p>
               </label>
             </div>
