--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="flex priorityListDiv">
               <p class="priorityText">Prioritet</p>
                <label class="flex priority" for="highPriorityCheck">
-                <input type="checkbox" id="highPriorityCheck" class="tastPriorityCheck">
+                <input type="checkbox" id="highPriorityCheck" class="taskPriorityCheck">
                 <p class=highPriorityText> Høy - må gjøres i dag </p>
               </label>
               <label class="flex priority" for="mediumPriorityCheck">
