--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="styles.css" />
-    <script defer src="script.js"></script>
+    <script type="module" src="script.js"></script>
   </head>
   <!-- Body = Informasjon til nettsiden -->
   <body>
