--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
             </ul>
           </div>
           <div class="flex buttonDiv">
-            <button id="taskCompletedButton" class="taskCompletedButton">
+            <button id="taskCompletedButton" class="taskCompletedButton flex">
               <img class="taskCompletedImg" src="Icons/check-mark.png" alt="fant ikke icon">
               Oppdrag utført !
             </button>
-            <button id="taskDeleteButton" class="taskDeleteButton">
+            <button id="taskDeleteButton" class="taskDeleteButton flex">
               <img class="taskDeleteImg" src="Icons/recycle-bin.png" alt="fant ikke icon">
               Slett meg !
             </button>
