--- a/index.html
+++ b/index.html
@@ -78,15 +78,15 @@
 
     <footer>
       <img
-        class="kodeloftlogo"
+        class="kodeloftLogoImg"
         src="Icons/kodeloftalpha.png"
         alt="fant ikke logo"
       />
-      <div class="kreditasjonfooter">
-        <p class="footertext">Web-side utviklet av Harald Nydal</p>
-        <p class="footertext">Kodeloftet 1 - Gruppe 15</p>
+      <div class="myInfoDiv">
+        <p class="footerText">Laget av :</p>
+        <p class="footerTextName">Harald N.</p>
       </div>
-      <div class="emailandgithub">
+      <div class="contactInfo">
         <a href="mailto:haraldn.kodeloftet@gmail.com" target="_blank">
           <img src="Icons/email.png" alt="fant ikke icon" />
         </a>
