--- a/index.html
+++ b/index.html
@@ -77,24 +77,21 @@
     </main>
 
     <footer>
-      <img
-        class="kodeloftLogoImg"
-        src="Icons/kodeloftalpha.png"
-        alt="fant ikke logo"
-      />
-      <div class="myInfoDiv">
-        <p class="footerText">Laget av :</p>
-        <p class="footerTextName">Harald N.</p>
+      <img class="kodeloftLogoImg" src="Icons/kodeloftalpha.png" alt="fant ikke logo">
+      <div class="flex myInfoWrapper">
+        <div class="myInfoDiv">
+          <p class="footerText">Laget av :</p>
+          <p class="footerTextName">Harald N.</p>
+        </div>
+        <div class="contactInfo">
+          <a href="mailto:haraldn.kodeloftet@gmail.com" target="_blank">
+            <img src="Icons/email.png" alt="fant ikke icon" />
+          </a>
+          <a href="https://github.com/Lazy-CSharp-Coder" target="_blank">
+            <img src="Icons/github.png" alt="fant ikke icon" />
+          </a>
+        </div>
       </div>
-      <div class="contactInfo">
-        <a href="mailto:haraldn.kodeloftet@gmail.com" target="_blank">
-          <img src="Icons/email.png" alt="fant ikke icon" />
-        </a>
-        <a href="https://github.com/Lazy-CSharp-Coder" target="_blank">
-          <img src="Icons/github.png" alt="fant ikke icon" />
-        </a>
-      </div>
-
       <!-- Logo, navigasjon, kreditasjon, betingelser (TOS - Terms of Service), søkefelt, SoME-->
     </footer>
   </body>
