--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <!-- Logo, bedriftsnavn, navigasjon, temabytter, søkefelt, SoMe -->
       <img class="logoHeader" src="/Icons/request.png" alt="fant ikke icon" />
       <h1> Min<span class="toDoText">"to-do"</span>liste</h1>
-      <img class="darkLightIcon" src="/Icons/brightness.png">
+      <img id="darkLightIcon" class="darkLightIcon" src="/Icons/brightness.png">
       
     </header>
 
