--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
       <!-- Hovedinnhold: introduksjon, produkt, fremvisning -->
       <section id="hero" class="flex hero">
         <form class="flex regTaskToDoForm">
-          <label class="flex taskToDoLabel" for="taskToDo">
+          <label class="flex taskToDoLabel" for="taskToDoInput">
             <img class="taskIcon" src="Icons/sticky-note.png" alt="fant ikke icon">
-            <input type="text" name="taskToDo" id="taskToDo" class="taskToDo" placeholder="skriv inn hva som må gjøres" minlength="1" maxlength="50">
+            <input type="text" name="taskToDoInput" id="taskToDoInput" class="taskToDoInput" placeholder="skriv inn hva som må gjøres" minlength="1" maxlength="50">
           </label>
-          <label class="flex taskDateLabel" for="taskDate">
+          <label class="flex taskDateLabel" for="taskDateInput">
             <img class="taskDateIcon" src="Icons/calendar.png" alt="fant ikke icons">
-            <input type="datetime" name="taskDate" id="taskDate" class="taskDate" placeholder="Dag/Måned">
+            <input type="datetime" name="taskDateInput" id="taskDateInput" class="taskDateInput" placeholder="Dag/Måned">
           </label>
           <div class="flex taskPriorityDiv">
             <img class="taskPriorityIcon" src="Icons/priority.png" alt="fant ikke icon">
