--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <ul id="toDoList" class="toDoList">
             </ul>
           </div>
-          <div class="flex buttonDiv">
+          <!-- <div class="flex buttonDiv">
             <button id="taskCompletedButton" class="taskCompletedButton flex">
               <img class="taskCompletedImg" src="Icons/check-mark.png" alt="fant ikke icon">
               Oppdrag utført !
@@ -69,7 +69,7 @@
               <img class="taskDeleteImg" src="Icons/recycle-bin.png" alt="fant ikke icon">
               Slett meg !
             </button>
-          </div>
+          </div> -->
         <!-- </div> -->
 
         <!-- Hero / Main / Home -->
