--- a/index.html
+++ b/index.html
@@ -51,14 +51,13 @@
           </div>  
           <button id="addTaskToListButton" class="addTaskToListButton">Legg til i liste</button>
         </form>
-        <!-- <div class="listAndButtonWrapper"> -->
+      
           <div class="flex toDoListDiv">
             <div class="flex listHeadingDiv">
               <p class="listHeadingText">Dato :</p>
               <p class="listHeadingText">Hva skal gjøres :</p>
-           </div>
-            <ul id="toDoList" class="toDoList">
-            </ul>
+            </div>
+            <ul id="toDoList" class="toDoList">  </ul>
           </div>
           <!-- <div class="flex buttonDiv">
             <button id="taskCompletedButton" class="taskCompletedButton flex">
@@ -70,9 +69,6 @@
               Slett meg !
             </button>
           </div> -->
-        <!-- </div> -->
-
-        <!-- Hero / Main / Home -->
       </section> 
     </main>
 
