--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </label>
           <label class="flex taskDateLabel" for="taskDateInput">
             <img class="taskDateIcon" src="Icons/calendar.png" alt="fant ikke icons">
-            <input type="datetime" name="taskDateInput" id="taskDateInput" class="taskDateInput" placeholder="Dag/Måned">
+            <input type="datetime-local" name="taskDateInput" id="taskDateInput" class="taskDateInput" placeholder="Dato">
           </label>
           <div class="flex taskPriorityDiv">
             <img class="taskPriorityIcon" src="Icons/priority.png" alt="fant ikke icon">
