--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <div class="flex listHeadingDiv">
               <p class="listHeadingText">Dato :</p>
               <p class="listHeadingText">Hva skal gjøres :</p>
+              <button id="sortListButton" class="sortListButton">Sorter listen</button>
             </div>
             <ul id="toDoList" class="toDoList">  </ul>
           </div>
