ordnet sort button sånn ca

--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
       
           <div class="flex toDoListDiv">
             <div class="flex listHeadingDiv">
-              <p class="listHeadingText">Dato :</p>
-              <p class="listHeadingText">Hva skal gjøres :</p>
+              <div class="flex listTextDiv">
+                <p class="listHeadingText">Dato :</p>
+                <p class="listHeadingText">Hva skal gjøres :</p>
+              </div>
               <button id="sortListButton" class="sortListButton">Sorter etter dato</button>
             </div>
             <ul id="toDoList" class="toDoList">  </ul>
