--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
           </div>  
           <button id="addTaskToListButton" class="addTaskToListButton">Legg til i liste</button>
         </form>
+        <div class="errorMsgDiv">
+          <p class="errorHeaderText">Det oppstod en feil :</p>
+        </div>
       
           <div class="flex toDoListDiv">
             <div class="flex listHeadingDiv">
