--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@
             </div>
           </div>  
           <button id="addTaskToListButton" class="addTaskToListButton">Legg til i liste</button>
+          <div class="errorMsgDiv hidden">
+            <p class="errorHeadingText">Det oppstod en feil :</p>
+          </div>
         </form>
-        <div class="errorMsgDiv">
-          <p class="errorHeaderText">Det oppstod en feil :</p>
-        </div>
+       
       
           <div class="flex toDoListDiv">
             <div class="flex listHeadingDiv">
