--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
           </div>  
           <button id="addTaskToListButton" class="addTaskToListButton">Legg til i liste</button>
-          <div class="errorMsgDiv hidden">
+          <div id="errorMsgDiv" class="errorMsgDiv hidden">
             <p class="errorHeadingText">Det oppstod en feil :</p>
           </div>
         </form>
