skal legge animasjon for sorter

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="flex listHeadingDiv">
               <div class="flex listTextDiv">
                 <p class="listHeadingText">Dato :</p>
-                <p class="listHeadingText">Hva skal gjøres :</p>
+                <p class="listHeadingText">Hva skal gjøres ?</p>
               </div>
               <button id="sortListButton" class="sortListButton">Sorter etter dato</button>
             </div>
