lagt til litt forskjelllig

--- a/index.html
+++ b/index.html
@@ -77,15 +77,25 @@
             </button>
           </div> -->
       </section> 
+      <div class="flex creditsIcons">
+        <a href="https://www.flaticon.com/free-icons/calendar" title="calendar icons">Calendar icons created by Freepik - Flaticon</a>
+        <a href="https://www.flaticon.com/free-icons/to-do" title="to do icons">To do icons created by Freepik - Flaticon</a>
+        <a href="https://www.flaticon.com/free-icons/priority" title="priority icons">Priority icons created by Freepik - Flaticon</a>
+        <a href="https://www.flaticon.com/free-icons/tick" title="tick icons">Tick icons created by Octopocto - Flaticon</a>
+        <a href="https://www.flaticon.com/free-icons/recycle-bin" title="recycle bin icons">Recycle bin icons created by cah nggunung - Flaticon</a> 
+        <a href="https://www.flaticon.com/free-icons/brightness" title="brightness icons">Brightness icons created by Freepik - Flaticon</a>
+      </div>
     </main>
 
     <footer>
       <img class="kodeloftLogoImg" src="Icons/kodeloftalpha.png" alt="fant ikke logo">
+      <button id="creditButton" class="creditButton">Icons created by</button>
       <div class="flex myInfoWrapper">
         <div class="myInfoDiv">
           <p class="footerText">Laget av :</p>
           <p class="footerTextName">Harald N.</p>
         </div>
+        
         <div class="contactInfo">
           <a href="mailto:haraldn.kodeloftet@gmail.com" target="_blank">
             <img src="Icons/email.png" alt="fant ikke icon" />
