--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </button>
           </div> -->
       </section> 
-      <div class="flex creditIconDiv">
+      <div class="flex creditIconDiv hidden">
         <a href="https://www.flaticon.com/free-icons/calendar" title="calendar icons">Calendar icons created by Freepik - Flaticon</a>
         <a href="https://www.flaticon.com/free-icons/to-do" title="to do icons">To do icons created by Freepik - Flaticon</a>
         <a href="https://www.flaticon.com/free-icons/priority" title="priority icons">Priority icons created by Freepik - Flaticon</a>
