--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <button id="addTaskToListButton" class="addTaskToListButton">Legg til i liste</button>
            
           </form>
-          <div id="errorMsgDiv" class="errorMsgDiv hidden">
+          <div id="errorMsgDiv" class="errorMsgDiv flex hidden">
             <p class="errorHeadingText">Det oppstod en feil :</p>
           </div>
         </div>
